Update lazygit config with Dracula syntax theme
Add Dracula color scheme to delta pager for better syntax highlighting in diffs

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -1,6 +1,7 @@
 git:
-  pagers:
-    - pager: delta --dark --paging=never --side-by-side --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
+  paging:
+    colorArg: always
+    pager: delta --dark --paging=never --side-by-side --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}" --syntax-theme=Dracula
 
 gui:
   language: "en"
