feat: lazygit内でのファイル編集時に既存のnvimインスタンスで開くように設定
- nvimサーバーパイプを起動時に自動作成
- lazygitのeditCommandTemplateでnvim --serverを使用
- ネストされたnvimではなく、元のnvimインスタンスで新しいタブとして開く

--- a/lazygit/config.yml
+++ b/lazygit/config.yml
@@ -3,5 +3,9 @@ git:
     colorArg: always
     pager: delta --dark --paging=never --side-by-side --line-numbers --hyperlinks --hyperlinks-file-link-format="lazygit-edit://{path}:{line}" --syntax-theme=Dracula
 
+os:
+  editCommand: "nvim"
+  editCommandTemplate: '{{editor}} --server "$NVIM_SERVER_PIPE" --remote-tab "{{filename}}"'
+
 gui:
   language: "en"
